# haveibeenpwned-local

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  README.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  convertdialog.cpp  convertdialog.h  convertdialog.ui  haveibeenpwned-local.pro  haveibeenpwned-local.qrc  haveibeenpwned-local.rc  licensedialog.cpp  licensedialog.h  licensedialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  pwnedresult.cpp  pwnedresult.h  resultdialog.cpp  resultdialog.h  resultdialog.ui  resulttabledialog.cpp  resulttabledialog.h  resulttabledialog.ui
installer/: README.txt  haveibeenpwned-local.iss
installer/AppDir/: LICENSE
linux/: create-appimage-linuxdeployqt-qt6_9_3.sh  create-appimage-qt6_10_1.sh  create-appimage-qt6_9_3.sh
linux/AppDir/usr/share/applications/: haveibeenpwned-local.desktop
python/: build_database_en.py  query_db_en.py  query_db_list.py
